sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:19: error: not found: value getNombresValeurs
			while(j>getNombreValeurs()-1 && getValeur(j-getNombresValeurs()) > v)
                                                                    ^